finally - fixing gap between mail icon and email

--- a/css/theme.css
+++ b/css/theme.css
@@ -93,9 +93,11 @@ footer {
 
 li.email {
 	background: url(img/mail-icon-teal.png);
+	background-repeat: no-repeat;
+	background-position: 0px 50%;
 	width: 50px;
 	height: 50px;
-	padding-right: 50;
+	padding-left: 10px;
 	display: inline;
 }
 
